feat: Added models endpoint
