# backend/docs/openapi.yaml
@@ -179,6 +179,25 @@ components:
           format: uri
           type: string
       type: object
+    GetAIModelsResponseBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://localhost:8080/schemas/GetAIModelsResponseBody.json
+          format: uri
+          readOnly: true
+          type: string
+        models:
+          items:
+            $ref: "#/components/schemas/LLM"
+          type:
+            - array
+            - "null"
+      required:
+        - models
+      type: object
     GetAllRubiksCubesResponseBody:
       additionalProperties: false
       properties:
@@ -350,6 +369,26 @@ info:
   version: v1
 openapi: 3.1.0
 paths:
+  /api/v1/ai/models:
+    get:
+      description: Returns the list of available LLMs
+      operationId: get-ai-models
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetAIModelsResponseBody"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: List AI models
+      tags:
+        - ai
   /api/v1/rubiks-cubes:
     get:
       description: Lists rubiks cubes with an optional limit
